update some words

--- a/2-1.md
+++ b/2-1.md
@@ -1,4 +1,4 @@
-## 2-1刑事訴訟制度之改革
+## 2-1 刑事訴訟制度之改革
 
 ### ㈠ 探討增強當事人進行主義及其配套措施
 
@@ -511,6 +511,7 @@
 城副院長仲模、邱教授聯恭、陳理事長長贊成。
 
 #### 提案五—㈡（提案者：司法院、法務部、民間團體、最高法院學術硏究會、陳瑞仁委員）
+
 減輕處理案件之負擔
 
 ##### 背景說明：
@@ -735,15 +736,16 @@
 城副院長仲模、邱教授聯恭、陳理事長長贊成。
 
 #### 提案五—㈤（提案者：法務部、陳瑞仁委員）
+
 檢察官人力物力資源之改善
 
-##### 具體內容詳見議題二—三提案一
+具體內容詳見議題二—三提案一
 
-分組會議及全體會議結論同議題二—三提案一
+#### 分組會議及全體會議結論同議題二—三提案一
 
 ㈡強化第一審之事實審功能，以第一審爲事實審審判中心，第二審採行事後審，第三審採行嚴格法律審並採上訴許可制
 
-議題說明：
+##### 議題說明：
 
 按第一審距離案發時間最近，證據之調查與其他審級相較而言，最爲容易。惟依我國目前司法實務運作情形，法官彷彿檢察官之接棒者，檢察官反而未能善盡舉證之責，現制旣採事實審兩級制，第二審又採覆審制，致第一審不受重視，案件常在第二、三審中一再進行，二審法官苦不堪言，整個訴訟制度之審級結構呈現直筒型之不合理現象，此均導因於第一審事實審之功能不彰，自有檢討之必要。而我國現行刑事訴訟制度，採事實審兩級制，第二審之審理並採覆審制，就第一審所審認之事實，經上訴部分，第二審再爲完全重複之調查，以致案件大量上訴，程序重覆，事實上此時再爲調查，證據已非新鮮，更難保無湮滅、勾串之情形，不但妨礙眞實之發現，增加第二審法院工作之負擔，且違反訴訟經濟原則，使第一審成爲司法資源的浪費，而有輕忽第一審判決之嫌，影響人民對於司法整體之信賴，因此目前實施之第二審覆審制，亦有加以硏究修正之必要。復就現行司法實務之現況以觀，人民不服第二審判決而提起第三審上訴之案件，約占得上訴第三審案件之百分之五十，致最高法院案件量至爲繁重，又由於現行制度第二審係採覆審制，第二審重覆爲事實調查之結果，往往予被告湮滅、僞造、變造證據，勾串共犯、證人的機會，最高法院不得不將案件發回第二審，於是案件常在第二、三審間擺盪不定，司法正義無法獲得即時之伸張，影響人民對於司法之信賴，是故目前第三審制度之設計，亦有檢討改進之必要。
 
