--- a/1-1.md
+++ b/1-1.md
@@ -42,7 +42,7 @@
 
 ###### 丙案（多元多軌）
 
-1、司法院保留，由大法官組成，負責解釋憲法及政黨違憲案件之審理。
+一、司法院保留，由大法官組成，負責解釋憲法及政黨違憲案件之審理。
 
 二、最高法院、行政法院及公務員懲戒委員會均維持現制，分別掌理民、刑事訴訟終審審判、行政訴訟終審審判及公務員懲戒等審判權。
 
