update image path

--- a/2-2.md
+++ b/2-2.md
@@ -18,7 +18,7 @@
 
 法官、檢察官、被告（與辯護人同座）席位成馬蹄形三方關係，檢察官與被告對向而坐：
 
-![](2-2-1.jpg)
+![](images/2-2-1.jpg)
 
 立法例：德國現制
 
@@ -28,7 +28,7 @@
 
 法官位於中間，檢察官與被告（與辯護人同座或辯護人坐於被告後方）同在法官對面，檢察官席位與辯護人席位同高：
 
-![](2-2-2.jpg)
+![](images/2-2-2.jpg)
 
 實施步驟及時程：先與法務部協商，經本會討論決議後，即修正「高等法院以下各級法院法庭席位布置規則」，預計於八十八年十二月三十一日完成。
 
@@ -36,7 +36,7 @@
 
 在現行刑事訴訟制度未變更前，法官、檢察官、辯護人席位及法台高度仍維持現狀，但爲使辯護人在法庭上容易與被告討論及交換意見，可將被告席置於辯護人席右側，被害人（或證人）席置於檢察官席左側，另仍維持目前之應訊席，以利法庭辯論活動之進行（詳附圖）。
 
-![](2-2-3.jpg)
+![](images/2-2-3.jpg)
 
 ##### 分組會議
 
